updated order, menu

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,12 +39,15 @@
         "css/blocks/features.scss",
         "css/blocks/reviews.scss",
         "css/blocks/order.scss",
-        "css/blocks/fixed-menu.scss"
+        "css/blocks/fixed-menu.scss",
+        "css/blocks/team.scss",
+        "css/blocks/how-we-work.scss",
+        "css/blocks/menu.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
